[project]
name = "hyperlocalwx"
version = "0.1.0"
description = "Tiny helpers for Team 46 hyperlocal weather data"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "pandas>=2.0",
  "pyarrow>=14.0",
  "geopandas>=0.14",
  "shapely>=2.0"
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["hyperlocalwx*"]
exclude = ["data*", "raw*", "scripts*", "examples*"]
